Checkpoint 2 - cg797efc51

--- a/todo_backend/.env.example
+++ b/todo_backend/.env.example
@@ -1,3 +1,8 @@
-# Optional: override the SQLite database url. Default is sqlite:///./todo.db
-# Example to place DB in a subfolder named data:
-# DATABASE_URL=sqlite:///./data/todo.db
+# Example environment variables for the Todo Backend (FastAPI + SQLite)
+# Copy this file to ".env" and adjust values as needed.
+
+# SQLAlchemy-style database URL.
+# By default, the app uses sqlite:///./todo.db if this is not set.
+# To connect to the shared SQLite database container, point this to the absolute path of the SQLite file.
+# Example: sqlite:////absolute/path/to/myapp.db
+DATABASE_URL=
