Checkpoint 3 - cg797efc51

--- a/todo_backend/.env.example
+++ b/todo_backend/.env.example
@@ -1,8 +1,6 @@
-# Example environment variables for the Todo Backend (FastAPI + SQLite)
-# Copy this file to ".env" and adjust values as needed.
+# Environment variables for Todo Backend
 
-# SQLAlchemy-style database URL.
-# By default, the app uses sqlite:///./todo.db if this is not set.
-# To connect to the shared SQLite database container, point this to the absolute path of the SQLite file.
-# Example: sqlite:////absolute/path/to/myapp.db
-DATABASE_URL=
+# SQLAlchemy database URL. By default the app uses "sqlite:///./todo.db" if not set.
+# For an absolute SQLite file path (recommended when pointing to a shared DB file), use four slashes:
+# sqlite:////absolute/path/to/myapp.db
+# DATABASE_URL=sqlite:///./todo.db
