Checkpoint 4 - cg797efc51

--- a/todo_backend/.env.example
+++ b/todo_backend/.env.example
@@ -3,4 +3,13 @@
 # SQLAlchemy database URL. By default the app uses "sqlite:///./todo.db" if not set.
 # For an absolute SQLite file path (recommended when pointing to a shared DB file), use four slashes:
 # sqlite:////absolute/path/to/myapp.db
+#
+# To point at the database container, open:
+#   ../simple-todo-application-300452-300463/database/db_connection.txt
+# and copy either:
+#   - Connection string: (paste directly)
+#   - File path: (prepend sqlite://// and paste)
+#
+# Examples:
 # DATABASE_URL=sqlite:///./todo.db
+# DATABASE_URL=sqlite:////home/kavia/workspace/code-generation/simple-todo-application-300452-300463/database/myapp.db
